--- a/facebook/build.gradle
+++ b/facebook/build.gradle
@@ -1,23 +1,6 @@
 apply plugin: 'android-library'
+android androidConfiguration
 
 dependencies {
-    compile 'com.android.support:support-v4:13.0.+'
-}
-
-android {
-    compileSdkVersion 19
-    buildToolsVersion "19.0.3"
-
-    defaultConfig {
-        minSdkVersion 8
-        targetSdkVersion 19
-    }
-
-    sourceSets {
-        main {
-            manifest.srcFile 'AndroidManifest.xml'
-            java.srcDirs = ['src']
-            res.srcDirs = ['res']
-        }
-    }
+    compile ANDROID_SUPPORT
 }
